<?xml version="1.0" encoding="utf-8"?>

<!-- Translated by: amoledwatchfaces -->
<resources lang="en" country="US">
    <!-- Do not translate translatable="false" lines -->
    <string name="app_name">Complications Suite</string> <!-- Does not need to be translated, but it's recommended -->

    <!-- Make sure \n\n is in the same position -->
    <string name="message_checking">This phone companion app was created for you to easily find and download application to your watch device. Wear OS API 27+ devices are supported.\n\nChecking for Wear OS devices…\n\nPlease turn on Bluetooth connection, connect your Wear OS device and refresh this app.</string>
    <string name="message_no_devices">This phone companion app was created for you to easily find and download application to your watch device. Wear OS API 27+ devices are supported.\n\nYou have no Wear OS devices connected to your phone at this time…\n\nPlease turn on Bluetooth connection, connect your Wear OS device and refresh this app.</string>
    <string name="message_missing_all">This phone companion app was created for you to easily find and download application to your watch device. Wear OS API 27+ devices are supported.\n\nPlease click on the button below to install app to your watch device(s).\n\nYou can freely uninstall this mobile app :)</string>
    <string name="message_some_installed">This phone companion app was created for you to easily find and download application to your watch device. Wear OS API 27+ devices are supported.\n\nPlease click on the button below to install app to your watch device(s).\n\nYou can freely uninstall this mobile app :)</string>
    <string name="message_all_installed">This phone companion app was created for you to easily find and download application to your watch device. Wear OS API 27+ devices are supported.\n\nPlease click on the button below to install app to your watch device(s).\n\nYou can freely uninstall this mobile app :)</string>

    <string name="store_request_successful">Please check your watch device</string>
    <string name="store_request_unsuccessful">Play Store Request Failed. Your Wear OS device may have API Lower than 27 (older devices).</string>

    <string name="contact">NOTE:\n\nIf you downloaded the application mistakenly or for some other reason it is not possible to install wearable app, contact us at:</string>
    <string name="support_amoledwatchfaces_com" translatable="false">support@amoledwatchfaces.com</string>

    <string name="you_can_check_our_full_watch_face_portfolio_here">You can check our full watch face portfolio here:</string>
    <string name="play_google_com" translatable="false">amoledwatchfaces™ - dev page</string>

    <string name="rate_app_now">Rate App</string>
    <string name="install_app">Install App on Wear device</string>
    <string name="refresh">Refresh</string>
</resources>
