<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2022 amoledwatchfaces™
  ~ support@amoledwatchfaces.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:fadeScrollbars="true"
    tools:context="com.weartools.weekdayutccomp.MainMobileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/information_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_missing_all"
            android:textAlignment="center"
            android:textColor="#C5C5C5"
            android:textSize="15.5sp"
            app:layout_constraintBottom_toTopOf="@+id/information_text_view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.136"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/information_text_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textColor="#C5C5C5"
            android:textSize="15.5sp"
            app:layout_constraintTop_toBottomOf="@+id/information_text_view"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/information_text_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/you_can_check_our_full_watch_face_portfolio_here"
            android:textAlignment="center"
            android:textColor="#C5C5C5"
            android:textSize="15.5sp"
            app:layout_constraintTop_toBottomOf="@+id/btnEmail"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/btnEmail"
            android:layout_width="300dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:text="@string/support_amoledwatchfaces_com"
            android:textAlignment="viewStart"
            android:textColor="#b0ceff"
            android:textSize="15.5sp"
            app:layout_constraintTop_toBottomOf="@+id/information_text_view2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-1dp" />

        <TextView
            android:id="@+id/devpage"
            android:layout_width="300dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:text="@string/play_google_com"
            android:textAlignment="viewStart"
            android:textColor="#b0ceff"
            android:textSize="15.5sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/information_text_view3" />

        <Button
            android:id="@+id/btnRateNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:padding="15dp"
            android:text="@string/rate_app_now"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/devpage" />


        <Button
            android:id="@+id/buttonrefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:textSize="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/remote_open_button"
            app:layout_constraintEnd_toEndOf="@+id/remote_open_button"
            app:layout_constraintStart_toStartOf="@+id/remote_open_button"
            app:layout_constraintTop_toTopOf="@+id/remote_open_button"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/remote_open_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="#b0ceff"
            android:text="@string/install_app"
            android:textColor="#000000"
            android:textSize="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/devpage"
            app:layout_constraintVertical_bias="0.969"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
